[package]
name = "eulynx_tds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "eulynx_tds"
path = "src/main.rs"

[[bin]]
name = "dummy_ixl"
path = "src/dummy_ixl.rs"

[[bin]]
name = "thales_ixl"
path = "src/thales_ixl.rs"

[dependencies]
async-stream = "0.3.5"
figment = { version = "0.10.10", features = ["toml"] }
futures = "0.3.28"
miette = { version = "5.10.0", features = ["fancy"] }
prost = "0.12.0"
sci-rs = { git = "https://github.com/ctiedt/rasta-rs", default_features = false, features = [
    "scitds",
] }
#sci-rs = { path = "../rasta-rs/sci-rs", default-features = false, features = ["scitds"]}
serde = { version = "1.0.188", features = ["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = { version = "0.1.14", features = ["sync", "full"] }
tonic = "0.10.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[build-dependencies]
tonic-build = "0.10.0"
